[package]
name = "cellular3"
version = "0.1.0"
authors = ["CodeBunny"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
ndarray = { version = "0.13.0", features = ["rayon"] }
rand = "0.7.3"
rayon = "1.3.0"
noise = "0.6.0"
palette = "0.5.0"

mutagen = { path = "../mutagen" }
image = "0.22.5"
walkdir = "2.3.1"
lazy_static = "1.4.0"
rand_pcg = "0.2.1"
structopt = "0.3.9"
