[package]
name = "cellular3"
version = "0.1.0"
authors = ["CodeBunny"]
edition = "2018"

[dependencies]
chrono = "0.4.10"
fern = "0.5.9"
ggez = "0.5.1"
image = "0.22.5"
lazy_static = "1.4.0"
log = "0.4.8"
ndarray = { version = "0.13.0", features = ["rayon"] }
noise = "0.6.0"
palette = "0.5.0"
rand = "0.7.3"
rand_pcg = "0.2.1"
rayon = "1.3.0"
structopt = "0.3.9"
walkdir = "2.3.1"

mutagen = { path = "../mutagen" }