[package]
name = "cellular3"
version = "0.1.0"
authors = ["CodeBunny"]
edition = "2018"

[dependencies]
mutagen = { path = "../mutagen" }

chrono = "0.4.10"
failure = { version = "0.1.6", features = ["backtrace"] }
fern = "0.5.9"
ggez = "0.5.1"
image = "0.22.5"
itertools = "0.8.1"
lazy_static = "1.4.0"
log = "0.4.8"
ndarray = { version = "0.13.0", features = ["rayon"] }
nalgebra = "0.20.0"
noise = "0.6.0"
palette = "0.5.0"
rand = "0.7.3"
rand_pcg = "0.2.1"
rayon = "1.3.0"
reqwest = { version = "0.10.1", features = ["blocking"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8.11"
structopt = "0.3.9"
walkdir = "2.3.1"
